@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.3119 2003/08/27 16:07:39 adam Exp $
+$NetBSD: CHANGES,v 1.3120 2003/08/28 14:45:41 abs Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -3358,3 +3358,5 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated gtk2 to 2.2.3 [wiz 2003-08-27]
 	Updated librsync to 0.9.6nb1 [abs 2003-08-27]
 	Updated gtkmm to 2.2.7 [adam 2003-08-27]
+	Updated pkglint to 3.59 [abs 2003-08-27]
+
